# gp_app

./: CMakeLists.txt  certificate.pem.crt  private.pem.key  public.pem.key
src/: aws.cpp
